force-app/main/default/objects/CLI_CliList__c/CLI_CliList__c.object-meta.xml
<CustomObject>
    <description>Create your list of clients</description>
    <label>Client List</label>
    <nameField>
        <label>Client List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Lists</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>