force-app/main/default/objects/CLI_CliList__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Check if this is an active Client List.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>