force-app/main/default/objects/CLI_CliList__c/fields/Is_visible_by_CA__c.field-meta.xml
<CustomField>
    <fullName>Is_visible_by_CA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is visible by CA</label>
    <type>Checkbox</type>
</CustomField>