force-app/main/default/objects/CLI_CliList__c/fields/IsMasterClientList__c.field-meta.xml
<CustomField>
    <fullName>IsMasterClientList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMasterClientList</label>
    <type>Checkbox</type>
</CustomField>