force-app/main/default/objects/CLI_CliList__c/fields/IsProspectList__c.field-meta.xml
<CustomField>
    <fullName>IsProspectList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsProspectList</label>
    <type>Checkbox</type>
</CustomField>