force-app/main/default/objects/CLI_CliList__c/fields/Master_Client_List__c.field-meta.xml
<CustomField>
    <fullName>Master_Client_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to reattach Client lists to a Master Client list</description>
    <label>Master Client List</label>
    <referenceTo>CLI_CliList__c</referenceTo>
    <relationshipLabel>Related Client Lists</relationshipLabel>
    <relationshipName>Master_Client_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>