force-app/main/default/objects/CLI_CliList__c/fields/NbrClients__c.field-meta.xml
<CustomField>
    <fullName>NbrClients__c</fullName>
    <label># Clients</label>
    <summaryForeignKey>CLM_CliListMember__c.ClientList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>