force-app/main/default/objects/CLI_CliList__c/fields/Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code__c</fullName>
    <description>for Exclusive Experience campaigns</description>
    <label>Offer Code</label>
    <length>150</length>
    <type>Text</type>
</CustomField>