force-app/main/default/objects/CLI_CliList__c/fields/Offer_Code_new__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code_new__c</fullName>
    <label>Offer Code new</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Typology_new__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>XXPR_Offer_Code</valueSetName>
    </valueSet>
</CustomField>