force-app/main/default/objects/CLI_CliList__c/fields/Owner_Default_Store__c.field-meta.xml
<CustomField>
    <fullName>Owner_Default_Store__c</fullName>
    <formula>Text( Owner:User.DefaultStore__c)</formula>
    <label>Owner Default Store</label>
    <type>Text</type>
</CustomField>