force-app/main/default/objects/CLI_CliList__c/fields/Show_In_Icon__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Icon__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show In Icon</label>
    <type>Checkbox</type>
</CustomField>