force-app/main/default/objects/CLI_CliList__c/fields/TECH_CreatedFromTCLScreen__c.field-meta.xml
<CustomField>
    <fullName>TECH_CreatedFromTCLScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_CreatedFromTCLScreen</label>
    <type>Checkbox</type>
</CustomField>