force-app/main/default/objects/CLI_CliList__c/fields/TECH_IsReassignedClients__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsReassignedClients__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH_IsReassignedClients</label>
    <type>Checkbox</type>
</CustomField>