force-app/main/default/objects/CLI_CliList__c/fields/TECH_LaunchAddMembersBatch__c.field-meta.xml
<CustomField>
    <fullName>TECH_LaunchAddMembersBatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TECH Launch Add Members Batch</label>
    <type>Checkbox</type>
</CustomField>