force-app/main/default/objects/CLI_CliList__c/fields/TECH_OwnerDefaultStore__c.field-meta.xml
<CustomField>
    <fullName>TECH_OwnerDefaultStore__c</fullName>
    <label>TECH_OwnerDefaultStore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>