force-app/main/default/objects/CLI_CliList__c/fields/TECH_TempAccountIds__c.field-meta.xml
<CustomField>
    <fullName>TECH_TempAccountIds__c</fullName>
    <label>TECH Temp account ids</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>