force-app/main/default/objects/CLI_CliList__c/fields/TECH_UserId__c.field-meta.xml
<CustomField>
    <fullName>TECH_UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Lists</relationshipName>
    <type>Lookup</type>
</CustomField>