force-app/main/default/objects/CLI_CliList__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Reassign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>