force-app/main/default/objects/CLI_CliList__c/fields/Typology__c.field-meta.xml
<CustomField>
    <fullName>Typology__c</fullName>
    <description>for Exclusive Experience campaigns</description>
    <label>Typology</label>
    <length>150</length>
    <type>Text</type>
</CustomField>