force-app/main/default/objects/CLI_CliList__c/validationRules/CLI_VR01_ExpirationDate.validationRule-meta.xml
<ValidationRule>
    <fullName>CLI_VR01_ExpirationDate</fullName>
    <active>true</active>
    <errorConditionFormula>!$User.BypassVR__c &amp;&amp; Active__c
&amp;&amp; (
ExpirationDate__c &lt; TODAY()
||
ExpirationDate__c &gt; (TODAY()+3*365)
)
&amp;&amp; NbrClients__c &gt;= PRIORVALUE( NbrClients__c)</errorConditionFormula>
    <errorDisplayField>ExpirationDate__c</errorDisplayField>
    <errorMessage>Expiration date is limited to be from today to 3 years from now.</errorMessage>
</ValidationRule>