force-app/main/default/objects/CLI_CliList__c/validationRules/CLI_VR01_TransferCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>CLI_VR01_TransferCheck</fullName>
    <active>true</active>
    <errorConditionFormula>NOT($User.BypassVR__c ) 
&amp;&amp; 
ISCHANGED( OwnerId ) 
&amp;&amp; 
$Profile.Name = &quot;ICON_SA&quot;</errorConditionFormula>
    <errorMessage>You don&apos;t have the right to change Client List Owner.</errorMessage>
</ValidationRule>