force-app/main/default/objects/CLI_CliList__c/listViews/Client_Lists_Management.listView-meta.xml
<ListView>
    <fullName>Client_Lists_Management</fullName>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Is_visible_by_CA__c</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsMasterClientList__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Client Lists Management</label>
    <sharedTo>
        <group>ICON_MANAGERS_JAPAN</group>
        <role>Corporate</role>
        <role>Corporate_Central</role>
        <role>Corporate_Digital</role>
        <roleAndSubordinatesInternal>CORP_AMERICAS</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>CORP_CHINA</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>CORP_EUROPE</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>CORP_JAPAN</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>CORP_NORTH_ASIA</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>CORP_SOUTH_ASIA</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>