force-app/main/default/objects/CLI_CliList__c/listViews/My_Clients_Lists.listView-meta.xml
<ListView>
    <fullName>My_Clients_Lists</fullName>
    <columns>NAME</columns>
    <columns>NbrClients__c</columns>
    <columns>Active__c</columns>
    <columns>Description__c</columns>
    <columns>IsProspectList__c</columns>
    <columns>Owner_Default_Store__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Clients Lists</label>
    <language>en_US</language>
</ListView>